--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ endif(NOT CMAKE_BUILD_TYPE)
 if(MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Wall")
 elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long")
 endif()
 
 ################################################################################
@@ -45,7 +45,7 @@ add_subdirectory(src)
 file(GLOB_RECURSE sources src/*.cpp src/*.hpp)
 
 # main executable
-add_executable (celadro ${sources})
+add_executable(celadro ${sources})
 
 ################################################################################
 # dependencies
@@ -54,15 +54,22 @@ add_executable (celadro ${sources})
 # check for boost libraries
 find_package(Boost 1.36.0 COMPONENTS program_options REQUIRED)
 
-target_link_libraries(celadro PUBLIC
-  ${Boost_LIBRARIES}
-)
+target_link_libraries(celadro PUBLIC ${Boost_LIBRARIES})
+
+# cuda
+find_package(CUDA)
+if(CUDA_FOUND)
+  file(GLOB_RECURSE cuda_sources src/*.cu src/*.h)
+  cuda_compile(cuda_objects ${cuda_sources})
+  add_executable(celadro-cuda ${sources} ${cuda_objects})
+  target_link_libraries(celadro-cuda PUBLIC ${Boost_LIBRARIES} ${CUDA_LIBRARIES})
+endif()
 
 # openmp
 find_package(OpenMP)
 if(OPENMP_FOUND)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+  set_target_properties(celadro PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  set_target_properties(celadro PROPERTIES LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
 ################################################################################
