fixed compilation issue with CUDA compiler flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,8 +62,8 @@ if(CUDA_FOUND)
   cuda_compile(cuda_objects ${cuda_sources})
   add_executable(celadro-cuda ${sources} ${cuda_objects})
   target_link_libraries(celadro-cuda PUBLIC ${Boost_LIBRARIES} ${CUDA_LIBRARIES})
-  set_target_properties(celadro-cuda PROPERTIES COMPILE_FLAGS "-D_CUDA")
   set_target_properties(celadro-cuda PROPERTIES COMPILE_FLAGS "-L ${CUDA_INCLUDE_DIRS}")
+  set_target_properties(celadro-cuda PROPERTIES COMPILE_FLAGS "-D_CUDA_ENABLED")
 endif()
 
 # openmp
