--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,16 +57,16 @@ add_executable(celadro ${sources})
 find_package(Boost 1.36.0 COMPONENTS program_options REQUIRED)
 
 # cuda
-find_package(CUDA)
-if(CUDA_FOUND)
-  file(GLOB_RECURSE cuda_sources src/*.cu src/*.h)
-  list(APPEND CUDA_NVCC_FLAGS "-D_CUDA;-arch=sm_61;-std=c++11;-O2;-DVERBOSE")
-  cuda_compile(cuda_objects ${cuda_sources})
-  add_executable(celadro-cuda ${sources} ${cuda_objects})
-  target_link_libraries(celadro-cuda PUBLIC ${Boost_LIBRARIES} ${CUDA_LIBRARIES})
-  set_target_properties(celadro-cuda PROPERTIES APPEND COMPILE_FLAGS "-D_CUDA_ENABLED")
-  target_include_directories(celadro-cuda PUBLIC "${CUDA_INCLUDE_DIRS}")
-endif()
+# find_package(CUDA)
+# if(CUDA_FOUND)
+#   file(GLOB_RECURSE cuda_sources src/*.cu src/*.h)
+#   list(APPEND CUDA_NVCC_FLAGS "-D_CUDA;-arch=sm_61;-std=c++11;-O2;-DVERBOSE")
+#   cuda_compile(cuda_objects ${cuda_sources})
+#   add_executable(celadro-cuda ${sources} ${cuda_objects})
+#   target_link_libraries(celadro-cuda PUBLIC ${Boost_LIBRARIES} ${CUDA_LIBRARIES})
+#   set_target_properties(celadro-cuda PROPERTIES APPEND COMPILE_FLAGS "-D_CUDA_ENABLED")
+#   target_include_directories(celadro-cuda PUBLIC "${CUDA_INCLUDE_DIRS}")
+# endif()
 
 # openmp
 find_package(OpenMP)
@@ -74,6 +74,7 @@ if(OPENMP_FOUND)
   set_target_properties(celadro PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
   target_link_libraries(celadro ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
 else()
+  set_target_properties(celadro PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS}")
   target_link_libraries(celadro PUBLIC ${Boost_LIBRARIES})
 endif()
 
